# AdaptiveSph

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md
app/: App.cpp  App.hpp  CMakeLists.txt  Window.cpp  Window.hpp  main.cpp
app/benchmark/: BenchmarkCase.cpp  BenchmarkCase.hpp  BenchmarkManager.cpp  BenchmarkManager.hpp  BenchmarkVisualizer.cpp  BenchmarkVisualizer.hpp  DamBreakBenchmark.hpp  ExperimentBase.cpp  ExperimentBase.hpp  LidDrivenCavity.cpp  LidDrivenCavity.hpp  LidDrivenCavityBenchmark.hpp  MetricsCollector.cpp  MetricsCollector.hpp  PoiseuilleBenchmark.hpp  PoiseuilleFlow.cpp  PoiseuilleFlow.hpp  TaylorGreenBenchmark.hpp  TaylorGreenVortex.cpp  TaylorGreenVortex.hpp
app/benchmark/experiments/: ExperimentBase.cpp  ExperimentBase.hpp  LidDrivenCavity.cpp  LidDrivenCavity.hpp  PoiseuilleFlow.cpp  PoiseuilleFlow.hpp  TaylorGreenVortex.cpp  TaylorGreenVortex.hpp
app/gui/: SimulationDataGui.cpp  SimulationDataGui.hpp
app/input/: KeyboardHandler.cpp  KeyboardHandler.hpp  MouseHandler.cpp
app/input_handler/: KeyboardHandler.cpp  MouseHandler.cpp  MouseHandler.hpp
app/mesh/: InvertedCube.cpp  InvertedCube.hpp  UvSphere.cpp  UvSphere.hpp
app/movement/: MovementHandler.cpp  MovementHandler.hpp  RotationHandler.cpp  RotationHandler.hpp
app/movement_handler/: MovementHandler.cpp  MovementHandler.hpp  RotationHandler.cpp
app/ui/: SimulationDataGui.cpp  SimulationDataGui.hpp  Window.cpp  Window.hpp
app/utils/: Configuration.cpp  Configuration.hpp  ConfigurationManager.cpp  ConfigurationManager.hpp  Formatters.hpp  FrameTimeManager.cpp  FrameTimeManager.hpp  Serializers.hpp  Signals.hpp  TaskScheduler.hpp
cuda/: CMakeLists.txt
cuda/include/cuda/: Api.cuh  ImportedMemory.cuh  Simulation.cuh  kernel.cuh
cuda/include/cuda/memory/: ImportedMemory.cuh
cuda/include/cuda/physics/: StaticBoundaryDomain.cuh
cuda/include/cuda/refinement/: RefinementParameters.cuh  VelocityParameters.cuh
cuda/include/cuda/simulation/: Simulation.cuh
cuda/include/cuda/simulation/physics/: StaticBoundaryDomain.cuh
cuda/src/: AdaptiveSphSimulation.cu  AdaptiveSphSimulation.cuh  Algorithm.cu  Algorithm.cuh  CudaTimer.cu  CudaTimer.cuh  ImportedParticleMemory.cu  ImportedParticleMemory.cuh  Kernel.cu  Kernel.cuh  SimulationFactory.cu  Span.cuh  SphSimulation.cu  SphSimulation.cuh  kernel.cu
cuda/src/algorithm/: AdaptiveAlgorithm.cu  AdaptiveAlgorithm.cuh  Algorithm.cu  Algorithm.cuh  AlgorithmENS.cu  AlgorithmENS.cuh  BoundaryAlgorithm.cu  BoundaryAlgorithm.cuh  Common.cuh  NeighborGrid.cu  NeighborGrid.cuh  WendlandKernel.cuh
cuda/src/algorithm/adaptive/: AdaptiveAlgorithm.cu  AdaptiveAlgorithm.cuh
cuda/src/algorithm/kernels/: Kernel.cu  Kernel.cuh  KernelsENS.cu  KernelsENS.cuh
cuda/src/algorithm/neighbors/: NeighborKernels.cu  NeighborKernels.cuh
cuda/src/common/: Iteration.cu  Iteration.cuh  Iteration.hpp  Memory.cuh  Utils.cu  Utils.cuh
cuda/src/device/: Kernel.cu  Kernel.cuh
cuda/src/memory/: ImportedParticleMemory.cu  ImportedParticleMemory.cuh
cuda/src/physics/: StaticBoundaryDomain.cu
cuda/src/refinement/: Common.cuh  CurvatureCriterion.cu  CurvatureCriterion.cuh  InterfaceCriterion.cu  InterfaceCriterion.cuh  ParticleOperations.cu  ParticleOperations.cuh  VelocityCriterion.cu  VelocityCriterion.cuh  VorticityCriterion.cu  VorticityCriterion.cuh
cuda/src/refinement/criteria/: CurvatureCriterion.cu  CurvatureCriterion.cuh  InterfaceCriterion.cu  InterfaceCriterion.cuh  VelocityCriterion.cu  VelocityCriterion.cuh  VorticityCriterion.cu  VorticityCriterion.cuh
cuda/src/simulation/: AdaptiveSphSimulation.cu  AdaptiveSphSimulation.cuh  SimulationFactory.cu  SphSimulation.cu  SphSimulation.cuh  SphSimulationENS.cu  SphSimulationENS.cuh
cuda/src/simulation/adaptive/: AdaptiveSphSimulation.cu  AdaptiveSphSimulation.cuh  SphSimulation.cuh
cuda/src/simulation/adaptive/refinement/: Common.cuh
cuda/src/simulation/neighbors/: NeighborGrid.cu  NeighborGrid.cuh
cuda/src/simulation/physics/: StaticBoundaryDomain.cu
cuda/src/simulation/refinement/: Common.cuh
cuda/src/simulation/refinement/criteria/: Common.cuh  InterfaceCriterion.cuh  VelocityCriterion.cuh  VorticityCriterion.cuh
cuda/src/utils/: DeviceValue.cuh  DeviceView.cuh  HelperMath.cuh  Iteration.cu  Iteration.cuh  IterationENS.cu  IterationENS.cuh  Memory.cuh  NeighborSharingUtils.cuh  Utils.cu  Utils.cuh
engine/: CMakeLists.txt
engine/config/: CMakeLists.txt  config.h.in
engine/include/panda/: Common.h  Logger.h  Window.h
engine/include/panda/gfx/: Camera.h  Context.h  Light.h  Scene.h  Vertex.h
engine/include/panda/gfx/object/: Mesh.h  Object.h  Surface.h  Texture.h
engine/include/panda/gfx/vulkan/: Alignment.h  Buffer.h  CommandBuffer.h  Context.h  Descriptor.h  Device.h  FrameInfo.h  Pipeline.h  Renderer.h  Scene.h  Shader.h  SharedBuffer.hpp  SwapChain.h  (+2 more)
engine/include/panda/utils/: Assert.h  Signal.h  Signals.h
engine/shader/: CMakeLists.txt
engine/shader/fs/: BoundaryParticle.frag  FluidParticle.frag  particle.frag
engine/shader/vs/: BoundaryParticle.vert  basic.vert  particle.vert  utils.glsl
engine/src/: Logger.cpp
engine/src/gfx/: Camera.cpp
engine/src/gfx/vulkan/: Buffer.cpp  CommandBuffer.cpp  Context.cpp  Descriptor.cpp  Device.cpp  Pipeline.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  SharedBuffer.cpp  SwapChain.cpp
engine/src/panda/: Logger.cpp
engine/src/panda/gfx/: Alignment.h  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  Context.cpp  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  FrameInfo.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  Scene.cpp  Shader.cpp  Shader.h  SharedBuffer.cpp  SharedBuffer.hpp  SwapChain.cpp  SwapChain.h  UboLight.h
engine/src/panda/utils/: Concepts.h  Utils.h
src/: App.cpp  App.hpp  CMakeLists.txt  main.cpp
src/cuda/: CMakeLists.txt  main.cu
src/input_handler/: KeyboardHandler.hpp
src/mesh/: InvertedCube.cpp  InvertedCube.hpp
src/movement_handler/: MovementHandler.hpp  RotationHandler.hpp
src/utils/: Formatters.hpp
(+60 files in other folders)
